--- a/Project 1/json/jsconfig.json
+++ b/Project 1/json/jsconfig.json
@@ -3,6 +3,7 @@
       "module": "commonjs",
       "target": "es6"
     },
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules"],
+    "print": ["results"]
     
 }
